feat: auth impl
